Wed Jan 29 19:22:45 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enumerator.c: include internal.h instead of declaring the external
	  function there.

Wed Jan 29 18:52:09 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enumerator.c (enumerator_with_index_i): add the declaration of
	  rb_int_succ().  this fixes test failure on OS X introduced at r44745.

Wed Jan 29 14:44:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_strptime.c (date__strptime_internal): unset
	  case-insensitive flag for [:alpha:], which already implies both
	  cases, to get rid of backtrack explosion.  [ruby-core:58984]
	  [Bug #9221]

Wed Jan 29 14:44:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_parse.c (parse_time): unset case-insensitive flag
	  for [:alpha:], which already implies both cases, to get rid of
	  backtrack explosion.  [ruby-core:58876] [Bug #9221]

Wed Jan 29 14:26:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_with_index): should not store local variable
	  address to memoise the arguments.  it is invalidated after the return.
	  [ruby-core:58692] [Bug #9178]

Wed Jan 29 14:26:10 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* enumerator.c (enumerator_with_index): try to convert given offset to
	  integer. fix bug introduced in r39594.

Wed Jan 29 14:20:11 2014  Eric Hodel  <drbrain@segment7.net>

	* enumerator.c (enumerator_with_index):  Restore handling of a nil memo
	  from r39594.

Wed Jan 29 14:08:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (rb_infinity_float): suppress overflow in
	  constant arithmetic warnings.  [ruby-core:57981] [Bug #9044]

Wed Jan 29 14:08:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC 2013 supports C99 mathematics
	  functions.  [ruby-core:57981] [Bug #9044]

Wed Jan 29 14:00:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compar.c (cmp_eq): fail if recursion.  [ruby-core:57736] [Bug #9003]
