@@ -839,15 +839,14 @@ create_ip_exc(interp, exc, fmt, va_alist)
 #endif
 {
     va_list args;
-    char buf[BUFSIZ];
+    VALUE msg;
     VALUE einfo;
     struct tcltkip *ptr = get_ip(interp);
 
     va_init_list(args,fmt);
-    vsnprintf(buf, BUFSIZ, fmt, args);
-    buf[BUFSIZ - 1] = '\0';
+    msg = rb_vsprintf(fmt, args);
     va_end(args);
-    einfo = rb_exc_new2(exc, buf);
+    einfo = rb_exc_new_str(exc, msg);
     rb_ivar_set(einfo, ID_at_interp, interp);
     if (ptr) {
         Tcl_ResetResult(ptr->ip);
@@ -6641,7 +6640,7 @@ ip_make_safe_core(interp, argc, argv)
     if (Tcl_MakeSafe(ptr->ip) == TCL_ERROR) {
         /* return rb_exc_new2(rb_eRuntimeError,
                               Tcl_GetStringResult(ptr->ip)); */
-        return create_ip_exc(interp, rb_eRuntimeError,
+        return create_ip_exc(interp, rb_eRuntimeError, "%s",
                              Tcl_GetStringResult(ptr->ip));
     }
 
@@ -9331,7 +9330,7 @@ ip_get_variable2_core(interp, argc, argv)
             volatile VALUE exc;
             /* exc = rb_exc_new2(rb_eRuntimeError,
                                  Tcl_GetStringResult(ptr->ip)); */
-            exc = create_ip_exc(interp, rb_eRuntimeError,
+            exc = create_ip_exc(interp, rb_eRuntimeError, "%s",
                                 Tcl_GetStringResult(ptr->ip));
             /* Tcl_Release(ptr->ip); */
             rbtk_release_ip(ptr);
@@ -9470,7 +9469,7 @@ ip_set_variable2_core(interp, argc, argv)
             volatile VALUE exc;
             /* exc = rb_exc_new2(rb_eRuntimeError,
                                  Tcl_GetStringResult(ptr->ip)); */
-            exc = create_ip_exc(interp, rb_eRuntimeError,
+            exc = create_ip_exc(interp, rb_eRuntimeError, "%s",
                                 Tcl_GetStringResult(ptr->ip));
             /* Tcl_Release(ptr->ip); */
             rbtk_release_ip(ptr);
@@ -9590,7 +9589,7 @@ ip_unset_variable2_core(interp, argc, argv)
         if (FIX2INT(flag) & TCL_LEAVE_ERR_MSG) {
             /* return rb_exc_new2(rb_eRuntimeError,
                                   Tcl_GetStringResult(ptr->ip)); */
-            return create_ip_exc(interp, rb_eRuntimeError,
+            return create_ip_exc(interp, rb_eRuntimeError, "%s",
                                  Tcl_GetStringResult(ptr->ip));
         }
         return Qfalse;
