@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 503
+#define RUBY_PATCHLEVEL 504
 
-#define RUBY_RELEASE_DATE "2014-01-29"
+#define RUBY_RELEASE_DATE "2014-01-30"
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 29
+#define RUBY_RELEASE_DAY 30
 
 #include "ruby/version.h"
 
