@@ -1,3 +1,11 @@
+Thu Jan 30 11:07:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/bigdecimal/bigdecimal.c (CLASS_NAME): macro to wrap
+	  depending on PRIsVALUE for 1.9.  [Backport #9406]
+
+	* ext/bigdecimal/bigdecimal.c (DECIMAL_SIZE_OF_BITS): fallback
+	  definition for 2.1 or older.  [ruby-core:59750] [Backport #9406]
+
 Wed Jan 29 19:22:45 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* enumerator.c: include internal.h instead of declaring the external
